@@ -8,12 +8,41 @@
   <name>Parlimate Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+      <dependency>
+<groupId>com.paypal.sdk</groupId>
+<artifactId>rest-api-sdk</artifactId>
+          <version>1.14.0</version>
+</dependency>
+
+      <!-- SLF4J API -->
+
+
+      <!-- Logback Classic -->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>2.0.0</version>
+      </dependency>
+
+      <!-- Logback Classic Binding (SLF4J binding for Logback) -->
+      <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.3.0</version>
+      </dependency>
+
+
+      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.sun.activation</groupId>
+          <artifactId>javax.activation</artifactId>
+          <version>1.2.0</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>Parlimate</finalName>
@@ -22,8 +51,8 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
-                  <source>8</source>
-                  <target>8</target>
+                  <source>9</source>
+                  <target>9</target><compilerArgs>--enable-preview</compilerArgs>
               </configuration>
           </plugin>
       </plugins>
